<resources>
    <string name="app_name">SimbirTest</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter name</string>

    <string name="time">%1$02d:%2$02d</string>
    <string name="save">save</string>
    <string name="enter_description">Enter description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
</resources>